ast/testdata/tests/errors/contracts/missing_bracket.rql
contract x() -> void {
    // Hello world!
